<resources>
    <string name="app_name">Technica2019</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_content_ask">content_ask</string>
    <string name="title_activity_content_school">content_school</string>
    <string name="title_activity_content_name">content_name</string>
    <string name="title_activity_content_assignments">content_assignments</string>
    <string name="title_activity_content__questions">activity_content_questions</string>
    <string name="Fake_Text">fake_text</string>
    <string name="enter_id">0892586</string>
    <string name="button">Next</string>
    <string name="autofill_hint">Hint</string>
    <string name="student_name">What is your name?</string>
    <string name="enter_name">John Doe</string>
    <string name="button_2">Next</string>
    <string name="school_name">What school do you go to?</string>
    <string name="enter_school">Enter school name</string>
    <string name="button_3">Next</string>
    <string name="app_title">Class Task</string>
    <string name="uni_enter_hint">Florida International University</string>
    <string name="load">Loading Your Tasks</string>
    <string name="school_id">What is your school ID?</string>
    <string name="name_app">Class Task</string>


</resources>
