<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".content_school"
    tools:showIn="@layout/activity_content_school">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="207dp"
        android:layout_height="40dp"
        android:layout_marginStart="64dp"
        android:layout_marginTop="158dp"
        android:layout_marginEnd="64dp"
        android:layout_marginBottom="72dp"
        android:fontFamily="@font/abel"
        android:text="@string/enter_school"
        android:textAlignment="center"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/editText2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editText2"
        android:layout_width="289dp"
        android:layout_height="53dp"
        android:layout_marginTop="104dp"
        android:autofillHints=""
        android:ems="10"
        android:fontFamily="@font/abel"
        android:hint="@string/uni_enter_hint"
        android:inputType="textPersonName"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="@+id/textView2"
        app:layout_constraintStart_toStartOf="@+id/textView2"
        app:layout_constraintTop_toTopOf="@+id/textView2" />

    <Button
        android:id="@+id/button4"
        android:layout_width="105dp"
        android:layout_height="50dp"
        android:layout_marginTop="176dp"
        android:fontFamily="@font/abel"
        android:text="@string/button_3"
        app:layout_constraintEnd_toEndOf="@+id/textView2"
        app:layout_constraintStart_toStartOf="@+id/textView2"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />
</androidx.constraintlayout.widget.ConstraintLayout>